discord-cluster-manager/k8s/test-gpu-device-plugin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-device-plugin
  namespace: arc-runners
spec:
  containers:
  - name: test
    image: ghcr.io/leoxinhaolee/amd-runner:latest
    command: ["/bin/bash", "-c"]
    args:
      - |
        [...]
    resources:
      requests:
        amd.com/gpu: "1"
      limits:
        amd.com/gpu: "1"
    securityContext:
      privileged: true
      runAsUser: 0
      runAsGroup: 0
      capabilities:
        add:
          - SYS_ADMIN
          - SYS_RESOURCE
          - SYS_PTRACE
  restartPolicy: Never
  nodeSelector:
    amd.com/gpu.present: "true"
  securityContext:
    runAsUser: 0
    runAsGroup: 0
    supplementalGroups:
      - 992
